# Mini-Games-CPP

./: .gitignore  README.md
ASCIIStyle/Battleship/include/: core.h  gui.h  player.h  utils.h
ASCIIStyle/Battleship/src/: board.cpp  utils.cpp
ASCIIStyle/HangmanGame/: README.md
ASCIIStyle/NumberGuesser/include/: config.h  utils.h
ASCIIStyle/NumberGuesser/src/: utils.cpp
ASCIIStyle/SpaceInvaders/: CMakeLists.txt  README.md
ASCIIStyle/SpaceInvaders/include/: gui.h  spaceship.h
ASCIIStyle/SpaceInvaders/src/: battlefield.cpp  core.cpp  main.cpp  utils.cpp
Arcade/Breakout/: CMakeLists.txt  CMakePresets.json
Arcade/Breakout/graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  graphics_utils.cpp  graphics_utils.h
Arcade/Breakout/shapes/: Circle2D.cpp  Circle2D.h  Line2D.cpp  Line2D.h  Rectangle2D.cpp  Rectangle2D.h  Shape2D.cpp  Shape2D.h  Triangle2D.cpp  Triangle2D.h
Arcade/Breakout/src/: main.cpp
Arcade/Breakout/utils/: Vec2D.cpp  Vec2D.h  vec2D_utils.cpp  vec2D_utils.h
Arcade/libs/Graphics/: CMakeLists.txt
Arcade/libs/Graphics/include/: Color.h  Screen.h  ScreenBuffer.h
Arcade/libs/Graphics/src/: Color.cpp  Screen.cpp  ScreenBuffer.cpp
Arcade/libs/Graphics/tests/: test_graphics.cpp
Arcade/libs/Shapes/: CMakeLists.txt
Arcade/libs/Shapes/include/: Circle2D.h  Line2D.h  Rectangle2D.h  Shape2D.h  Triangle2D.h
Arcade/libs/Shapes/src/: Circle2D.cpp  Line2D.cpp  Rectangle2D.cpp  Shape2D.cpp  Triangle2D.cpp  main.cpp
Arcade/libs/Shapes/tests/: test_shapes.cpp
Arcade/libs/Vec2D/: CMakeLists.txt
Arcade/libs/Vec2D/include/: vec2D_utils.h
Arcade/libs/Vec2D/src/: Vec2D.cpp  main.cpp
Arcade/libs/Vec2D/tests/: main.cpp  test_vec2D.cpp
Terminal Style/Battleship/: CMakeLists.txt  CMakePresets.json  README.md
Terminal Style/Battleship/include/: board.h  config.h  core.h  gui.h  player.h  ship.h  utils.h
Terminal Style/Battleship/src/: board.cpp  core.cpp  gui.cpp  main.cpp  player.cpp  ship.cpp  utils.cpp
Terminal Style/HangmanGame/: CMakeLists.txt  README.md
Terminal Style/HangmanGame/src/: board.cpp  core.cpp
Terminal Style/NumberGuesser/: CMakeLists.txt
Terminal Style/NumberGuesser/include/: gui.h
Terminal Style/NumberGuesser/src/: gui.cpp  main.cpp  utils.cpp
Terminal Style/SpaceInvaders/: CMakeLists.txt  README.md
Terminal Style/SpaceInvaders/include/: battlefield.h  common.h  core.h  gui.h  score.h  spaceship.h  utils.h
Terminal Style/SpaceInvaders/src/: battlefield.cpp  core.cpp  gui.cpp  main.cpp  score.cpp  spaceship.cpp
Treminal Style/HangmanGame/: CMakeLists.txt  README.md
Treminal Style/HangmanGame/data/: sentences.txt
Treminal Style/HangmanGame/include/: board.h  config.h  core.h
Treminal Style/HangmanGame/src/: board.cpp  core.cpp  main.cpp
Treminal Style/NumberGuesser/: README.md
Treminal Style/NumberGuesser/include/: config.h  utils.h
Treminal Style/NumberGuesser/src/: main.cpp  utils.cpp
